# book-exchange-web-app

./: .gitignore  .pre-commit-config.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  backend_tests.yaml  docker-image.yml  node.js.yml
backend/: Dockerfile  alembic.ini  config.py  db_models.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0108e7e0b5da_add_login.py  1275b8a1862e_create_tables.py  42d4e4f06306_add_listings.py  4810c5e9e2a4_books_table.py  e52e639d8cf8_users_table.py
backend/app/: __init__.py  api_models.py  api_schemas.py  books.py  common.py  db_models.py  listings.py  main.py  users.py
backend/app/api/: auth.py  books.py  listings.py  token.py  users.py
backend/app/core/: config.py  db.py
backend/db/: .placeholder  book_exchange.db
backend/tests/: conftest.py  test_authentication.py  test_db.py  test_root.py
backend/tests/api/: test_books.py  test_listings.py  test_users.py
backend/tests/test_api/: test_auth.py  test_books.py  test_listings.py  test_root.py  test_token.py  test_users.py
backend/utils/: data_generation.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: EyeFilledIcon.jsx.html  index.html
frontend/src/: App.jsx  App.test.js  App.test.tsx  App.tsx  main.tsx  provider.tsx
frontend/src/api/: api_calls.js  api_calls.test.js  api_calls.ts  endpoints.js  endpoints.ts
frontend/src/components/: icons.jsx  (+1 more)
(+52 files in other folders)
