[project]
name = "Book exchange"
description = "A simple web application for exchanging books"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    {name = "Christopher Roberts"}
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=. --cov-fail-under=99 -n auto"

[tool.coverage.run]
omit = [
    "backend/tests/*",
    "backend/alembic/*"
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__":',
     # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
fail_under = 99
